Fixed Video Delete, Added new Score calculator(slower but handles changes in stored values)